<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Shuffle</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_task">Actions</string>
    <string name="title_project">Projects</string>
    <string name="title_context">Tags</string>
    <string name="title_next_tasks">Top Actions</string>
    <string name="title_due_tasks">Due Actions</string>
    <string name="title_deferred">Deferred</string>
    <string name="title_deleted">Deleted</string>
    <string name="title_search">Search results</string>
    <string name="title_new_task">New action</string>
    <string name="title_edit_task">Edit action</string>
    <string name="title_view_task">View action</string>
    <string name="title_new_project">New project</string>
    <string name="title_edit_project">Edit project</string>
    <string name="title_new_context">New tag</string>
    <string name="title_edit_context">Edit tag</string>
    <string name="title_task_extras">Action extras</string>
    <string name="title_preferences">General Settings</string>
    <string name="title_preferences_clean">General Settings > Clean up</string>
    <string name="title_preferences_create_backup">Create backup</string>
    <string name="title_preferences_restore_backup">Restore from backup</string>
    <string name="title_help">Help</string>
    <string name="title_deferred_picker">On hold until...</string>
    <string name="title_due_picker">Due...</string>
    <string name="title_icon_picker">Choose icon</string>
    <string name="title_colour_picker">Choose color</string>
    <string name="title_calendar">Actions due %s</string>
    <string name="title_shortcut_picker">Pick shortcut</string>
    <string name="title_widget_picker">Pick widget content</string>
    <string name="title_context_picker">Pick a tag</string>
    <string name="title_contexts_picker">Pick tags</string>
    <string name="title_project_picker">Pick a project</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_and_add">Save and New</string>
    <string name="menu_complete">Mark complete</string>
    <string name="menu_incomplete">Mark incomplete</string>
    <string name="menu_move_up">Move up</string>
    <string name="menu_move_down">Move down</string>
    <string name="menu_insert">Add %s</string>
    <string name="menu_edit">Edit %s</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_undelete">Restore</string>
    <string name="menu_active">Mark active</string>
    <string name="menu_inactive">Mark inactive</string>
    <string name="menu_delete_entity">Delete %s</string>
    <string name="menu_undelete_entity">Restore %s</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_search">Search</string>
    <string name="menu_view_settings">View Settings</string>
    <string name="menu_help">Help</string>
    <string name="new_title">New…</string>
    <string name="project_title">Project</string>
    <string name="context_title">Tag</string>
    <string name="details_title">Details</string>
    <string name="set_button_title">Set</string>
    <string name="clear_button_title">Clear</string>
    <string name="edit_button_title">Edit</string>
    <string name="extras_button_title">Extra details…</string>
    <string name="save_button_title">Save</string>
    <string name="ok_button_title">OK</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="replace_button_title">Replace</string>
    <string name="warning_title">Warning</string>
    <string name="info_title">Information</string>
    <string name="task_name">Action</string>
    <string name="project_name">Project</string>
    <string name="context_name">Tag</string>
    <string name="nothing"></string>
    <string name="deleted">Deleted</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="from_context">(via tag)</string>
    <string name="from_project">(via project)</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="none_empty">None</string>
    <string name="no_project">No project</string>
    <string name="undefined">None</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="previous_button_title">Previous</string>
    <string name="next_button_title">Next</string>
    <string name="undo_button_title">Undo</string>
    <string name="search_label_action">Shuffle actions</string>
    <string name="search_hint_action">Search actions</string>
    <string name="search_settings_description_action">Text of actions</string>
    <string name="search_label_context">Shuffle tags</string>
    <string name="search_hint_context">Search tags</string>
    <string name="search_settings_description_context">Names of tags</string>
    <string name="search_label_project">Shuffle projects</string>
    <string name="search_hint_project">Search projects</string>
    <string name="search_settings_description_project">Names of projects</string>
    <string name="sample_data_title">Demonstration</string>
    <string name="clean_slate_title">Clean slate</string>
    <string name="whats_new_dialog_title">Shuffle</string>
<string name="whats_new_dialog_message">Thanks for downloading Shuffle.\n\n
<b>New in this version:</b>\n
\t• Translation fixes\n
\n
<b>New in version 3.0.0:</b>\n
\t• Push sync with brand new www.shuffle.co website\n
\t• New design including 1st class tablet support\n
\n
\n
<b>New in version 2.0.1:</b>\n
\t• Prevent soft keyboard popping up\n
\t• Android 2.1 compatibility\n
\n
<b>New in version 2.0.0:</b>\n
\t• Complete UI rewrite\n
\t• Full ICS compatibility\n
\t• Support for multiple contexts per action\n
\t• Context and project specific widgets and shortcuts\n
\t• Swipe to navigate between views\n
\t• New widget look (scrollable on ICS)\n
\t• Multi-select operations on action lists\n
\t• Quick add bar for actions, contexts and projects\n
\t• Default context applied more consistently\n
\t• Updated help screens\n
\t• Fixed issues with search\n
\t• Ability to filter by project or context on any view\n
\t• More and higher resolution context icons\n
\t• New Custom action view (set it up however you want)\n
\t• Minor Tracks fixes\n
\n
<b>New in version 1.7.3:</b>\n
\t• Fixed restore from backup bug\n
\n
<b>New in version 1.7.2:</b>\n
\t• Fixed dates when viewing Google calendar entries\n
\t• Improved Japanese translation\n
\t• Added Dutch translation\n
\n
<b>New in version 1.7.1:</b>\n
\t• Fixed crash creating new actions in Spanish version\n 
\t• Ignore deleted items calculating Top Actions\n
\n
<b>New in version 1.7.0:</b>\n
\t• View filters, customisable in each view.\n
\t• Active flags on contexts and projects.\n
\t• Deleted items are now recoverable.\n
\t• Toolbar added to list views.\n
\t• New 4x4 widget.\n
\t• Tickler view for inactive actions.\n
\t• Support for Tracks sites with self signed certificates.\n
\t• Fixed calendar selection bug on Android 2.2.\n
\t• Fixed action reordering in projects and Top Actions.\n
\t• Action view screen added.\n
\t• Spanish, Portugese and Japanese translations.\n
\n
\n
Also note that this application sends anonymous usage statistics back to a server.  If you\'d rather not
allow that, you can turn it off under Settings.</string>
    <string name="status_title">Status</string>
    <string name="deferred_until_phrase">On hold until %1$s</string>
    <string name="due_phrase">Due on %1$s</string>
    <string name="view_calendar_entry">View calendar entry</string>
    <string name="menu_done">Save</string>
    <string name="menu_doNotSave">Discard changes</string>
    <string name="add_project">Add project</string>
    <string name="description_title">Description</string>
    <string name="scheduling_title">Scheduling</string>
    <string name="scheduling_collapsed">Click to reveal scheduling options</string>
    <string name="scheduling_expanded">Click to hide scheduling options</string>
    <string name="start_title">Start</string>
    <string name="show_from_title">On hold until</string>
    <string name="due_date_title">Due</string>
    <string name="due_title">Due</string>
    <string name="not_deferred">Put on hold...</string>
    <string name="not_due">Pick due date...</string>
    <string name="all_day_title">All day</string>
    <string name="reminders_title">Reminders</string>
    <string name="add_to_gcal_title">Add to Calendar</string>
    <string name="add_to_gcal_detail_disabled">Add dates to enable this option</string>
    <string name="add_to_gcal_detail">New entry will load after saving</string>
    <string name="update_gcal_title">Update Calendar</string>
    <string name="update_gcal_detail">Updated entry will load after saving</string>
    <string name="completed_title">Completed</string>
    <string name="drag_n_drop_title">Rearrange actions</string>
    <string name="active_title">Active</string>
    <string name="deleted_title">Deleted</string>
    <string name="clear_title">Clear dates</string>
    <string name="colour_title">Color</string>
    <string name="archived_title">Archived</string>
    <string name="icon_title">Icon</string>
    <string name="name_title">Name</string>
    <string name="context_name_title">Tag name</string>
    <string name="project_name_title">Project name</string>
    <string name="sequence_title">Actions completed in sequence</string>
    <string name="sequence_subtitle">Only the first action appears in Top Actions</string>
    <string name="parallel_title">Actions completed in parallel</string>
    <string name="parallel_subtitle">All actions appear in Top Actions</string>
    <string name="default_context_title">Default tag</string>
    <string name="pick_default_context">Pick default tag...</string>
    <string name="preview_title">Preview</string>
    <string name="context_errands">Errands</string>
    <string name="context_online">Online</string>
    <string name="context_athome">At home</string>
    <string name="context_atwork">At work</string>
    <string name="context_contact">Contact</string>
    <string name="context_read">Read</string>
    <string name="day_button_title">Today</string>
    <string name="week_button_title">Next week</string>
    <string name="month_button_title">Next month</string>
    <string name="quick_add_title">Quick Add Bar</string>
    <string name="show_all">Show all</string>
    <string name="general_preferences">Google settings</string>
    <string name="title_calendar_preference">Calendar selection</string>
    <string name="summary_calendar_preference">For new Google Calendar entries</string>
    <string name="title_send_analytics_preference">Send usage data</string>
    <string name="summary_send_analytics_preference">Anonymous data is used for finding bugs and prioritizing features.</string>
    <string name="sync_preferences">Synchronization settings</string>
    <string name="backup_preferences">Backup settings</string>
    <string name="title_create_backup_preference">Backup to SD Card</string>
    <string name="summary_create_backup_preference">Save all actions, projects and contexts</string>
    <string name="filename_title">Backup file</string>
    <string name="backup_progress">Writing %1$s %2$s.</string>
    <string name="toast_backup_saved">Data successfully backed up to %1$s.</string>
    <string name="title_restore_backup_preference">Restore from SD Card</string>
    <string name="summary_restore_backup_preference">Recover data from backup</string>
    <string name="delete_completed_button_title">Delete</string>
    <string name="no_icon">No icon</string>
</resources>