<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/title_edit_context"
        />
    <item
        android:id="@+id/action_active"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/menu_active"
        />
    <item
        android:id="@+id/action_inactive"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        android:title="@string/menu_inactive"
        />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        />
    <item
        android:id="@+id/action_undelete"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/menu_undelete"
        />
</menu>