<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shuffle="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_move_up"
        android:icon="@drawable/ic_vertical_align_top_white_24dp"
        android:title="@string/menu_move_up"
        shuffle:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_move_down"
        android:icon="@drawable/ic_vertical_align_bottom_white_24dp"
        android:title="@string/menu_move_down"
        shuffle:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mark_complete"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/complete"
        shuffle:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_mark_incomplete"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/incomplete"
        shuffle:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        shuffle:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_undelete"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/menu_undelete"
        shuffle:showAsAction="ifRoom" />

</menu>