<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:checked="true"
            android:icon="@drawable/ic_drawer_inbox"
            android:title="@string/title_inbox"/>
        <item
            android:id="@+id/nav_next_tasks"
            android:checked="false"
            android:icon="@drawable/ic_drawer_next_actions"
            android:title="@string/title_next_tasks"/>
        <item
            android:id="@+id/nav_due_tasks"
            android:checked="false"
            android:icon="@drawable/ic_drawer_due"
            android:title="@string/title_due_tasks"/>
        <item
            android:id="@+id/nav_custom"
            android:checked="false"
            android:icon="@drawable/ic_drawer_custom"
            android:title="@string/title_custom"
            />
        <item
            android:id="@+id/nav_tickler"
            android:checked="false"
            android:icon="@drawable/ic_drawer_tickler"
            android:title="@string/title_tickler"/>
        <item
            android:id="@+id/nav_projects"
            android:checked="false"
            android:icon="@drawable/ic_drawer_folder"
            android:title="@string/title_project"/>
        <item
            android:id="@+id/nav_contexts"
            android:checked="false"
            android:icon="@drawable/ic_drawer_contexts"
            android:title="@string/title_context"/>
        <item
            android:id="@+id/nav_settings"
            android:checked="false"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/menu_preferences"/>
        <item
            android:id="@+id/nav_help"
            android:checked="false"
            android:icon="@drawable/ic_drawer_help"
            android:title="@string/menu_help"/>
    </group>
</menu>