<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mark_complete"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/menu_complete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_mark_incomplete"
        android:icon="@drawable/ic_done_green_24dp"
        android:title="@string/menu_incomplete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_update_contexts"
        android:icon="@drawable/ic_label_white_24dp"
        android:title="@string/title_contexts_picker"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_undelete"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/menu_undelete"
        app:showAsAction="never"
        />
</menu>