<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shuffle="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        shuffle:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_settings"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu_view_settings"
        shuffle:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/menu_edit"
        android:visible="false"
        shuffle:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        android:visible="false"
        shuffle:showAsAction="never" />
    <item
        android:id="@+id/action_undelete"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/menu_undelete"
        android:visible="false"
        shuffle:showAsAction="never" />
</menu>