<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 Android Shuffle Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="@color/white"
        android:fadingEdge="none"
        android:animateLayoutChanges="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:minHeight="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_1"
                android:layout_marginRight="16dp"
                android:hint="@string/context_name_title"
                android:tag="regular"
                android:autoText="true"
                android:singleLine="true"
                android:maxLength="50"
                android:background="@null"
                android:inputType="textAutoCorrect|textCapSentences">

                <requestFocus />
            </EditText>

        <View style="@style/EditDivider"
            android:layout_marginLeft="0dp"
            />

        <LinearLayout
            android:id="@+id/parallel_row"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:background="@drawable/list_selector_background"
            android:focusable="true"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/parallel_icon"
                android:src="@drawable/ic_directions_black_24dp"
                style="@style/EditEntryIcon"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:duplicateParentState="true">

                <TextView
                    android:id="@+id/parallel_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sequence_title"
                    android:duplicateParentState="true"
                    android:textColor="@color/label_color"
                    />

                <TextView
                    android:id="@+id/parallel_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parallel_label"
                    android:layout_alignLeft="@+id/parallel_label"
                    android:layout_centerVertical="true"
                    android:text="@string/sequence_title"
                    android:textSize="16sp"
                    android:textColor="@color/label_color"
                    android:duplicateParentState="true"
                    />


            </RelativeLayout>

        </LinearLayout>

        <View style="@style/EditDivider"
            android:layout_marginLeft="0dp"
            />

        <LinearLayout
            android:id="@+id/default_context_row"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:background="@drawable/list_selector_background"
            android:focusable="true"
            android:clickable="true"
            >

            <ImageView
                android:src="@drawable/ic_label_black_24dp"
                style="@style/EditEntryIcon"
                />

            <TextView
                android:id="@+id/default_context_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/default_context_title"
                style="@style/EditLabel"
                />

            <TextView
                android:id="@+id/default_context_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                style="@style/EditLabel"
                />

        </LinearLayout>

        <View style="@style/EditDivider" />

        <include
            layout="@layout/editor_active_entry"
            android:id="@+id/active_row" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/EditDivider"
        android:layout_marginLeft="0dp"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:tag="allcaps"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/delete_completed_button_title"
        android:textColor="@color/label_color"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>
