<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 Android Shuffle Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="@color/white"
        android:fadingEdge="none"
        android:animateLayoutChanges="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <org.dodgybits.shuffle.android.list.view.context.ContextListItem
                android:id="@+id/context_preview"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:minHeight="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_1"
                android:layout_marginRight="16dp"
                android:hint="@string/context_name_title"
                android:tag="regular"
                android:autoText="true"
                android:singleLine="true"
                android:maxLength="50"
                android:background="@null"
                android:inputType="textAutoCorrect|textCapSentences">

                <requestFocus />
            </EditText>

            <View style="@style/EditDivider"
                android:layout_marginLeft="0dp"
                />

            <LinearLayout
                android:id="@+id/colour_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector_background"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                >

                <ImageView
                    android:src="@drawable/ic_color_lens_black_24dp"
                    style="@style/EditEntryIcon"
                    />


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="?android:attr/scrollbarSize"
                    android:text="@string/colour_title"
                    android:duplicateParentState="true"
                    >

                    <TextView
                        android:id="@+id/colour_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/colour_display"
                        android:focusable="false"
                        android:clickable="false"
                        android:singleLine="true"
                        android:text="@string/colour_title"
                        android:duplicateParentState="true"
                        style="@style/EditLabel"
                        />

                    <TextView
                        android:id="@+id/colour_display"
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/keyline_1"
                        android:layout_centerVertical="true"
                        android:paddingTop="8dip"
                        android:focusable="false"
                        android:clickable="false"
                        android:duplicateParentState="true" />

                </RelativeLayout>

            </LinearLayout>

            <View style="@style/EditDivider" />

            <LinearLayout
                android:id="@+id/icon_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:background="@drawable/list_selector_background"
                android:focusable="true"
                android:clickable="true"
                >

                <ImageView
                    android:src="@drawable/ic_apps_black_24dp"
                    style="@style/EditEntryIcon"
                    />


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:paddingRight="?android:attr/scrollbarSize"
                    android:duplicateParentState="true"
                    >

                    <TextView
                        android:id="@+id/icon_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/icon_display"
                        android:focusable="false"
                        android:clickable="false"
                        android:singleLine="true"
                        android:text="@string/icon_title"
                        android:duplicateParentState="true"
                        style="@style/EditLabel"
                        />

                    <ImageView
                        android:id="@+id/icon_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="24dip"
                        android:focusable="false"
                        android:clickable="false" />

                    <TextView
                        android:id="@+id/icon_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:duplicateParentState="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="24dip"
                        android:text="@string/no_icon"
                        android:visibility="gone"
                        android:focusable="false"
                        android:clickable="false"
                        android:tag="bold"
                        style="@style/EditLabel"
                        />

                </RelativeLayout>

            </LinearLayout>

            <View style="@style/EditDivider" />

            <include
                layout="@layout/editor_active_entry"
                android:id="@+id/active_row" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/EditDivider"
        android:layout_marginLeft="0dp"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:tag="allcaps"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/delete_completed_button_title"
        android:textColor="@color/label_color"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>
